tests/parser/invalidinput/usingmx.idp
procedure main(){
	return 1
}

using <mx>
